--- a/wd/files/dobroznak.ua.dobroznakua.feed.main.html
+++ b/wd/files/dobroznak.ua.dobroznakua.feed.main.html
@@ -2057,6 +2057,18 @@ condition <b>new</b><br>
 product_type <b>Символіка України</b><br>
 
 <hr>
+price <b>170.00 UAH</b><br>
+title <b>Значок Патріотичний Серце України</b><br>
+description <b>Про товар: металевий значоку вигляді прапора україни - серденько.  Значок-прапор має кольори українського прапору, блакитна та жовта емалі виробу покриті прозорим полімером, що надає значку обсягу.   Подаруйте цей значок коханій україночці або коханому українцю.. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
+link <a href="https://dobroznak.ua/katalog/simvolika-ukrajini/znachok-sertse-ukrajini">https://dobroznak.ua/katalog/simvolika-ukrajini/znachok-sertse-ukrajini</a><br>
+image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_DSC_3401.jpg' height='70'><br>
+id <b>89</b><br>
+availability <b>in stock</b><br>
+identifier_exists <b>no</b><br>
+condition <b>new</b><br>
+product_type <b>Символіка України</b><br>
+
+<hr>
 price <b>190.00 UAH</b><br>
 title <b>Значок Вишиванка-Зірка в етно-стилі</b><br>
 description <b>Про товар: значок восьмипроменева зірка     в українському етносі - це зірка богородиці.Зірка - головний символ на різдво та на колядках в україні.  &quot;Повна рожа&quot; або &quot;рожечка&quot;, як її ще називають, означає об&#39;єднання жіночого та чоловічого. Ще зірка символізує всі вісім  сторін світу. Часто зустрічається в орнаментах українській вишивці та народні творчості.  Значок зірка гарний подарунок для тих хто, оточує себе оберегами та вкладає сенси в усе створено українцями.. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
