--- a/wd/files/dobroznak.ua.dobroznakua.feed.main.html
+++ b/wd/files/dobroznak.ua.dobroznakua.feed.main.html
@@ -10421,18 +10421,6 @@ condition <b>new</b><br>
 product_type <b>Символіка України</b><br>
 
 <hr>
-price <b>85.00 UAH</b><br>
-title <b>Магніт Закатний Прапор Упа 56мм</b><br>
-description <b>Про товар:. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
-link <a href="https://dobroznak.ua/katalog/simvolika-ukrajini/magnit-zakatnij-prapor-upa-56mm">https://dobroznak.ua/katalog/simvolika-ukrajini/magnit-zakatnij-prapor-upa-56mm</a><br>
-image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_IMG_E8046.JPG' height='70'><br>
-id <b>1922</b><br>
-availability <b>in stock</b><br>
-identifier_exists <b>no</b><br>
-condition <b>new</b><br>
-product_type <b>Символіка України</b><br>
-
-<hr>
 price <b>360.00 UAH</b><br>
 title <b>Брелок Прокуратура України</b><br>
 description <b>Про товар:                 виконан за технологією штампування. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
@@ -20735,6 +20723,18 @@ description <b>Про товар:                 значок покритий 
 link <a href="https://dobroznak.ua/katalog/emblemi-derzhavnikh-sluzhb/znachok-sluzhbi-bezpeki-ukrajini-kolo">https://dobroznak.ua/katalog/emblemi-derzhavnikh-sluzhb/znachok-sluzhbi-bezpeki-ukrajini-kolo</a><br>
 image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_photo_2022-12-13_16-04-16__2_.jpg' height='70'><br>
 id <b>2095</b><br>
+availability <b>in stock</b><br>
+identifier_exists <b>no</b><br>
+condition <b>new</b><br>
+product_type <b>Емблеми Державних Служб</b><br>
+
+<hr>
+price <b>180.00 UAH</b><br>
+title <b>Значок Національної Гвардії України (Коло)</b><br>
+description <b>Про товар:                 значок покритий наліпкою з полімером, що надає значку об&#39;єму та блиску. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
+link <a href="https://dobroznak.ua/katalog/emblemi-derzhavnikh-sluzhb/znachok-natsionalnoji-gvardiji-ukrajini-kolo">https://dobroznak.ua/katalog/emblemi-derzhavnikh-sluzhb/znachok-natsionalnoji-gvardiji-ukrajini-kolo</a><br>
+image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_photo_2022-12-13_16-04-16.jpg' height='70'><br>
+id <b>2096</b><br>
 availability <b>in stock</b><br>
 identifier_exists <b>no</b><br>
 condition <b>new</b><br>
