--- a/wd/files/dobroznak.ua.dobroznakua.feed.main.html
+++ b/wd/files/dobroznak.ua.dobroznakua.feed.main.html
@@ -10421,6 +10421,18 @@ condition <b>new</b><br>
 product_type <b>Символіка України</b><br>
 
 <hr>
+price <b>85.00 UAH</b><br>
+title <b>Магніт Закатний Прапор Упа 56мм</b><br>
+description <b>Про товар:. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
+link <a href="https://dobroznak.ua/katalog/simvolika-ukrajini/magnit-zakatnij-prapor-upa-56mm">https://dobroznak.ua/katalog/simvolika-ukrajini/magnit-zakatnij-prapor-upa-56mm</a><br>
+image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_IMG_E8046.JPG' height='70'><br>
+id <b>1922</b><br>
+availability <b>in stock</b><br>
+identifier_exists <b>no</b><br>
+condition <b>new</b><br>
+product_type <b>Символіка України</b><br>
+
+<hr>
 price <b>360.00 UAH</b><br>
 title <b>Брелок Прокуратура України</b><br>
 description <b>Про товар:                 виконан за технологією штампування. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
