--- a/wd/files/dobroznak.ua.dobroznakua.feed.main.html
+++ b/wd/files/dobroznak.ua.dobroznakua.feed.main.html
@@ -4842,11 +4842,47 @@ product_type <b>Символіка України</b><br>
 
 <hr>
 price <b>340.00 UAH</b><br>
+title <b>Значок Опоссум Ааааа</b><br>
+description <b>Про товар:. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
+link <a href="https://dobroznak.ua/katalog/simvolika-ukrajini/znachok-opossum-aaaaa">https://dobroznak.ua/katalog/simvolika-ukrajini/znachok-opossum-aaaaa</a><br>
+image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_211.jpg' height='70'><br>
+id <b>3645</b><br>
+availability <b>in stock</b><br>
+identifier_exists <b>no</b><br>
+condition <b>new</b><br>
+product_type <b>Символіка України</b><br>
+
+<hr>
+price <b>340.00 UAH</b><br>
 title <b>Значок Чашка з Квітами</b><br>
 description <b>Про товар:. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
 link <a href="https://dobroznak.ua/katalog/simvolika-ukrajini/znachok-chashka-z-kvitami">https://dobroznak.ua/katalog/simvolika-ukrajini/znachok-chashka-z-kvitami</a><br>
 image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_212.jpg' height='70'><br>
 id <b>3646</b><br>
+availability <b>in stock</b><br>
+identifier_exists <b>no</b><br>
+condition <b>new</b><br>
+product_type <b>Символіка України</b><br>
+
+<hr>
+price <b>340.00 UAH</b><br>
+title <b>Значок Чашка з Золотими Квітами</b><br>
+description <b>Про товар:. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
+link <a href="https://dobroznak.ua/katalog/simvolika-ukrajini/znachok-chashka-z-zolotimi-kvitami">https://dobroznak.ua/katalog/simvolika-ukrajini/znachok-chashka-z-zolotimi-kvitami</a><br>
+image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_36.jpg' height='70'><br>
+id <b>3647</b><br>
+availability <b>in stock</b><br>
+identifier_exists <b>no</b><br>
+condition <b>new</b><br>
+product_type <b>Символіка України</b><br>
+
+<hr>
+price <b>340.00 UAH</b><br>
+title <b>Значок Мавпа з Йогуртом Та Бубликом</b><br>
+description <b>Про товар:. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
+link <a href="https://dobroznak.ua/katalog/simvolika-ukrajini/znachok-mavpa-z-jogurtom-ta-bublikom">https://dobroznak.ua/katalog/simvolika-ukrajini/znachok-mavpa-z-jogurtom-ta-bublikom</a><br>
+image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_214.jpg' height='70'><br>
+id <b>3648</b><br>
 availability <b>in stock</b><br>
 identifier_exists <b>no</b><br>
 condition <b>new</b><br>
