--- a/wd/files/dobroznak.ua.dobroznakua.feed.main.html
+++ b/wd/files/dobroznak.ua.dobroznakua.feed.main.html
@@ -10770,18 +10770,6 @@ product_type <b>Символіка України</b><br>
 
 <hr>
 price <b>85.00 UAH</b><br>
-title <b>Прапорець Чернівецької Області (Без Тримача)</b><br>
-description <b>Про товар:                 ціна вказана без урахування ціни тримача.  Тримачі на вибір є пластикові або металеві, продаються окремо.. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
-link <a href="https://dobroznak.ua/katalog/simvolika-ukrajini/praporets-chernivetskoji-oblasti">https://dobroznak.ua/katalog/simvolika-ukrajini/praporets-chernivetskoji-oblasti</a><br>
-image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_photo_2022-09-16_12-26-15__2_.jpg' height='70'><br>
-id <b>1721</b><br>
-availability <b>in stock</b><br>
-identifier_exists <b>no</b><br>
-condition <b>new</b><br>
-product_type <b>Символіка України</b><br>
-
-<hr>
-price <b>85.00 UAH</b><br>
 title <b>Прапорець Чернігівської Області (Без Тримача)</b><br>
 description <b>Про товар:                 ціна вказана без урахування ціни тримача.  Тримачі на вибір є пластикові або металеві, продаються окремо.. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
 link <a href="https://dobroznak.ua/katalog/simvolika-ukrajini/praporets-chernigivskoji-oblasti">https://dobroznak.ua/katalog/simvolika-ukrajini/praporets-chernigivskoji-oblasti</a><br>
@@ -10794,35 +10782,11 @@ product_type <b>Символіка України</b><br>
 
 <hr>
 price <b>250.00 UAH</b><br>
-title <b>Vshnurok Київ</b><br>
-description <b>Про товар:                 шильди продаються парами. Клієнт може замовити як однаковий, так і різний дизайн на кожен шильд. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
-link <a href="https://dobroznak.ua/katalog/simvolika-ukrajini/vshnurok-kijiv">https://dobroznak.ua/katalog/simvolika-ukrajini/vshnurok-kijiv</a><br>
-image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full__0300012.JPG' height='70'><br>
-id <b>597</b><br>
-availability <b>in stock</b><br>
-identifier_exists <b>no</b><br>
-condition <b>new</b><br>
-product_type <b>Символіка України</b><br>
-
-<hr>
-price <b>250.00 UAH</b><br>
 title <b>Vshnurok Mcdonald&#39;s</b><br>
 description <b>Про товар:                 шильди продаються парами. Клієнт може замовити як однаковий, так і різний дизайн на кожен шильд. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
 link <a href="https://dobroznak.ua/katalog/simvolika-ukrajini/vshnurok-mcdonald-s">https://dobroznak.ua/katalog/simvolika-ukrajini/vshnurok-mcdonald-s</a><br>
 image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_IMG_8280.jpg' height='70'><br>
 id <b>951</b><br>
-availability <b>in stock</b><br>
-identifier_exists <b>no</b><br>
-condition <b>new</b><br>
-product_type <b>Символіка України</b><br>
-
-<hr>
-price <b>250.00 UAH</b><br>
-title <b>Vshnurok Burger King</b><br>
-description <b>Про товар:                 шильди продаються парами. Клієнт може замовити як однаковий, так і різний дизайн на кожен шильд. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
-link <a href="https://dobroznak.ua/katalog/simvolika-ukrajini/vshnurok-burger-king">https://dobroznak.ua/katalog/simvolika-ukrajini/vshnurok-burger-king</a><br>
-image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_IMG_8261.jpg' height='70'><br>
-id <b>942</b><br>
 availability <b>in stock</b><br>
 identifier_exists <b>no</b><br>
 condition <b>new</b><br>
@@ -10845,7 +10809,7 @@ price <b>190.00 UAH</b><br>
 title <b>Значок Прапори Україна / Нато</b><br>
 description <b>Про товар:. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
 link <a href="https://dobroznak.ua/katalog/simvolika-ukrajini/znachok-prapori-ukrajina-nato">https://dobroznak.ua/katalog/simvolika-ukrajini/znachok-prapori-ukrajina-nato</a><br>
-image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_photo_2022-09-20_15-47-45.jpg' height='70'><br>
+image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_IMG_0344.jpg' height='70'><br>
 id <b>1727</b><br>
 availability <b>in stock</b><br>
 identifier_exists <b>no</b><br>
@@ -19937,6 +19901,42 @@ condition <b>new</b><br>
 product_type <b>Прапорці в Наявності | Dobroznak.Ua</b><br>
 
 <hr>
+price <b>85.00 UAH</b><br>
+title <b>Прапорець Шотландії</b><br>
+description <b>Про товар:                 ціна вказана без урахування ціни тримача.  Тримачі на вибір є пластикові або металеві, продаються окремо.. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
+link <a href="https://dobroznak.ua/katalog/praportsi/praporets-shotlandii">https://dobroznak.ua/katalog/praportsi/praporets-shotlandii</a><br>
+image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_IMG_0348_1.jpg' height='70'><br>
+id <b>4002</b><br>
+availability <b>in stock</b><br>
+identifier_exists <b>no</b><br>
+condition <b>new</b><br>
+product_type <b>Прапорці в Наявності | Dobroznak.Ua</b><br>
+
+<hr>
+price <b>85.00 UAH</b><br>
+title <b>Прапорець Бельгії</b><br>
+description <b>Про товар:                 ціна вказана без урахування ціни тримача.  Тримачі на вибір є пластикові або металеві, продаються окремо.. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
+link <a href="https://dobroznak.ua/katalog/praportsi/praporets-belhii">https://dobroznak.ua/katalog/praportsi/praporets-belhii</a><br>
+image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_IMG_0354_.jpg' height='70'><br>
+id <b>4003</b><br>
+availability <b>in stock</b><br>
+identifier_exists <b>no</b><br>
+condition <b>new</b><br>
+product_type <b>Прапорці в Наявності | Dobroznak.Ua</b><br>
+
+<hr>
+price <b>85.00 UAH</b><br>
+title <b>Прапорець Турції</b><br>
+description <b>Про товар:                 ціна вказана без урахування ціни тримача.  Тримачі на вибір є пластикові або металеві, продаються окремо.. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
+link <a href="https://dobroznak.ua/katalog/praportsi/praporets-turtsii">https://dobroznak.ua/katalog/praportsi/praporets-turtsii</a><br>
+image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_IMG_0349_1.jpg' height='70'><br>
+id <b>4004</b><br>
+availability <b>in stock</b><br>
+identifier_exists <b>no</b><br>
+condition <b>new</b><br>
+product_type <b>Прапорці в Наявності | Dobroznak.Ua</b><br>
+
+<hr>
 price <b>250.00 UAH</b><br>
 title <b>Закладка Для Планера Пантон</b><br>
 description <b>Про товар: кожну закладку можна персоналізувати додавши гравіювання.. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
@@ -20661,7 +20661,7 @@ price <b>190.00 UAH</b><br>
 title <b>Значок Прапори Україна / Нато</b><br>
 description <b>Про товар:. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
 link <a href="https://dobroznak.ua/katalog/emblemi-derzhavnikh-sluzhb/znachok-prapori-ukrajina-nato">https://dobroznak.ua/katalog/emblemi-derzhavnikh-sluzhb/znachok-prapori-ukrajina-nato</a><br>
-image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_photo_2022-09-20_15-47-45.jpg' height='70'><br>
+image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_IMG_0344.jpg' height='70'><br>
 id <b>1727</b><br>
 availability <b>in stock</b><br>
 identifier_exists <b>no</b><br>
