--- a/wd/files/dobroznak.ua.dobroznakua.feed.main.html
+++ b/wd/files/dobroznak.ua.dobroznakua.feed.main.html
@@ -23153,4 +23153,16 @@ condition <b>new</b><br>
 product_type <b>Емблеми Державних Служб</b><br>
 
 <hr>
+price <b>80.00 UAH</b><br>
+title <b>Велкро На Вінілі</b><br>
+description <b>Про товар:                 велкро на вініловій основі дає вам можливість використовувати свої патчі/шеврони як мангніти на холодильник, або будь яку іншу металеву основу. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
+link <a href="https://dobroznak.ua/katalog/emblemi-derzhavnikh-sluzhb/velkro-na-vinili">https://dobroznak.ua/katalog/emblemi-derzhavnikh-sluzhb/velkro-na-vinili</a><br>
+image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_photo_17_2024-06-19_16-23-35.jpg' height='70'><br>
+id <b>4006</b><br>
+availability <b>in stock</b><br>
+identifier_exists <b>no</b><br>
+condition <b>new</b><br>
+product_type <b>Емблеми Державних Служб</b><br>
+
+<hr>
 </body></html>
