--- a/wd/files/woodyardstore.com.ua-ADONLY.woodyardstorecomua.feed.id0.html
+++ b/wd/files/woodyardstore.com.ua-ADONLY.woodyardstorecomua.feed.id0.html
@@ -1116,6 +1116,61 @@ availability <b>in stock</b><br>
 product_type <b>До Спальні</b><br>
 
 <hr>
+price <b>349 UAH</b><br>
+title <b>Декоративне Панно з Дерева, Настінний Декор Для Дому &quot;Місяць Над Горами&quot;, Мінімалістичний Стиль 20x20 См</b><br>
+GAStitle <b>Декоративне Панно з Дерева  Настінний Декор Для Дому &quot;Місяць Над Горами&quot;  Мінімалістичний Стиль 20x20 См</b><br>
+description <b>Декоративне панно з дерева, настінний декор для дому &quot;місяць над горами&quot;, мінімалістичний стиль 20x20 см</b><br>
+link <a href="https://woodyardstore.com.ua/ua/p1764235016-dekorativnoe-panno-dereva.html">https://woodyardstore.com.ua/ua/p1764235016-dekorativnoe-panno-dereva.html</a><br>
+image_link <img src='https://images.prom.ua/5654326934_dekorativne-panno-z.jpg' height='70'><br>
+id <b>1764235016</b><br>
+availability <b>in stock</b><br>
+product_type <b>До Спальні</b><br>
+
+<hr>
+price <b>349 UAH</b><br>
+title <b>Чорна Картина На Стіну, Дерев&#39;яний Декор Для Дому &quot;Сонце, Гори, Модерн&quot;, Оригінальний Подарунок 20x20 См</b><br>
+GAStitle <b>Чорна Картина На Стіну  Дерев&#39;яний Декор Для Дому &quot;Сонце  Гори  Модерн&quot;  Оригінальний Подарунок 20x20 См</b><br>
+description <b>Чорна картина на стіну, дерев&#39;яний декор для дому &quot;сонце, гори, модерн&quot;, оригінальний подарунок 20x20 см</b><br>
+link <a href="https://woodyardstore.com.ua/ua/p1764235024-chernaya-kartina-stenu.html">https://woodyardstore.com.ua/ua/p1764235024-chernaya-kartina-stenu.html</a><br>
+image_link <img src='https://images.prom.ua/5654334898_chorna-kartina-na.jpg' height='70'><br>
+id <b>1764235024</b><br>
+availability <b>in stock</b><br>
+product_type <b>До Спальні</b><br>
+
+<hr>
+price <b>349 UAH</b><br>
+title <b>Дерев&#39;яний Декор Для Дому, Сучасна Картина На Стіну &quot;Нічна Казка&quot;, Декоративне Панно 20x20 См</b><br>
+GAStitle <b>Дерев&#39;яний Декор Для Дому  Сучасна Картина На Стіну &quot;Нічна Казка&quot;  Декоративне Панно 20x20 См</b><br>
+description <b>Дерев&#39;яний декор для дому, сучасна картина на стіну &quot;нічна казка&quot;, декоративне панно 20x20 см</b><br>
+link <a href="https://woodyardstore.com.ua/ua/p1764235032-derevyannyj-dekor-dlya.html">https://woodyardstore.com.ua/ua/p1764235032-derevyannyj-dekor-dlya.html</a><br>
+image_link <img src='https://images.prom.ua/5654343628_derevyanij-dekor-dlya.jpg' height='70'><br>
+id <b>1764235032</b><br>
+availability <b>in stock</b><br>
+product_type <b>До Спальні</b><br>
+
+<hr>
+price <b>349 UAH</b><br>
+title <b>Дерев&#39;яний Декор Для Дому, Сучасна Картина На Стіну &quot;Нічний Вовк&quot;, Декоративне Панно 20x20 См</b><br>
+GAStitle <b>Дерев&#39;яний Декор Для Дому  Сучасна Картина На Стіну &quot;Нічний Вовк&quot;  Декоративне Панно 20x20 См</b><br>
+description <b>Дерев&#39;яний декор для дому, сучасна картина на стіну &quot;нічний вовк&quot;, декоративне панно 20x20 см</b><br>
+link <a href="https://woodyardstore.com.ua/ua/p1766538523-derevyannyj-dekor-dlya.html">https://woodyardstore.com.ua/ua/p1766538523-derevyannyj-dekor-dlya.html</a><br>
+image_link <img src='https://images.prom.ua/5655048729_derevyanij-dekor-dlya.jpg' height='70'><br>
+id <b>1766538523</b><br>
+availability <b>in stock</b><br>
+product_type <b>До Спальні</b><br>
+
+<hr>
+price <b>399 UAH</b><br>
+title <b>Дерев&#39;яна Картина На Стіну в Спальню, Декор в Кімнату &quot;Любляче Серце&quot;, Мінімалістичний Стиль 20x23 См</b><br>
+GAStitle <b>Дерев&#39;яна Картина На Стіну в Спальню  Декор в Кімнату &quot;Любляче Серце&quot;  Мінімалістичний Стиль 20x23 См</b><br>
+description <b>Дерев&#39;яна картина на стіну в спальню, декор в кімнату &quot;любляче серце&quot;, мінімалістичний стиль 20x23 см</b><br>
+link <a href="https://woodyardstore.com.ua/ua/p1964487710-derevyannaya-kartina-stenu.html">https://woodyardstore.com.ua/ua/p1964487710-derevyannaya-kartina-stenu.html</a><br>
+image_link <img src='https://images.prom.ua/5604844359_derevyana-kartina-na.jpg' height='70'><br>
+id <b>1964487710</b><br>
+availability <b>in stock</b><br>
+product_type <b>До Спальні</b><br>
+
+<hr>
 price <b>399 UAH</b><br>
 title <b>Картина Лофт, Настінний Декор Для Дому &quot;Закоханість Серце&quot;, Декоративне Панно 20x23 См</b><br>
 GAStitle <b>Картина Лофт  Настінний Декор Для Дому &quot;Закоханість Серце&quot;  Декоративне Панно 20x23 См</b><br>
