--- a/wd/files/dobroznak.ua.dobroznakua.feed.main.html
+++ b/wd/files/dobroznak.ua.dobroznakua.feed.main.html
@@ -1193,6 +1193,66 @@ condition <b>new</b><br>
 product_type <b>Символіка України</b><br>
 
 <hr>
+price <b>170.00 UAH</b><br>
+title <b>Значок Герб України Сквозний (Чороний Нікель)</b><br>
+description <b>Про товар: значок тризуб виконано з латуні за технологією наскрізного травлення. Такі значки носять як прикрасу на одязі, сумках, рюкзаках. Жінки одягають такі патріотичні значки на капелюшки та косинки. Значок тризуб припаде до душі всім: від студентів до держслужбовців.. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
+link <a href="https://dobroznak.ua/katalog/simvolika-ukrajini/znachok-gerb-ukrajini-skvoznij-choronij-nikel">https://dobroznak.ua/katalog/simvolika-ukrajini/znachok-gerb-ukrajini-skvoznij-choronij-nikel</a><br>
+image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_photo_2022-10-24_12-25-17__2_.jpg' height='70'><br>
+id <b>1869</b><br>
+availability <b>in stock</b><br>
+identifier_exists <b>no</b><br>
+condition <b>new</b><br>
+product_type <b>Символіка України</b><br>
+
+<hr>
+price <b>180.00 UAH</b><br>
+title <b>Значок Лого Наау, 20 Мм</b><br>
+description <b>Про товар: значок &quot;лого наау 20 мм&quot;  елегантний значок &quot;лого наау 20 мм&quot; з написом &quot;адвокат україни&quot; - стильний аксесуар для професіоналів юридичної сфери. Виготовлений із міцної латуні та покритий позолотою. Він виглядає вишукано та підкреслює вашу приналежність до національної асоціації адвокатів україни. Значок має круглу форму та розміри 0.8 х 20 х 20 мм. Зручна застібка-метелик забезпечує надійне кріплення.     Звертаємо вашу увагу, що ви завжди можете замовити цей або будь-який інший виріб з нашого сайту зі своїм логотипом, емблемою, гербом, знаком.  Мінімальна кількість продукції для замовлення з власним логотипом 10 одиниць.Термін виробництва від 5 робочих днів.. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
+link <a href="https://dobroznak.ua/katalog/simvolika-naau/znachok-logo-naau-20mm">https://dobroznak.ua/katalog/simvolika-naau/znachok-logo-naau-20mm</a><br>
+image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_IMG_7772.JPG' height='70'><br>
+id <b>24</b><br>
+availability <b>in stock</b><br>
+identifier_exists <b>no</b><br>
+condition <b>new</b><br>
+product_type <b>Символіка Наау</b><br>
+
+<hr>
+price <b>180.00 UAH</b><br>
+title <b>Значок Прапор Єс / України з Тризубом</b><br>
+description <b>Про товар:                 значок покритий прозорим полімером, що надає значку об&#39;єму. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
+link <a href="https://dobroznak.ua/katalog/simvolika-ukrajini/znachok-prapor-es-ukrajini-z-trizubom">https://dobroznak.ua/katalog/simvolika-ukrajini/znachok-prapor-es-ukrajini-z-trizubom</a><br>
+image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_photo_2023-06-14_11-22-38__2_.jpg' height='70'><br>
+id <b>2720</b><br>
+availability <b>in stock</b><br>
+identifier_exists <b>no</b><br>
+condition <b>new</b><br>
+product_type <b>Символіка України</b><br>
+
+<hr>
+price <b>699.00 UAH</b><br>
+title <b>Кокарда Міністерства Оборони України</b><br>
+description <b>Про товар:                 значок покритий прозорим полімером, що надає значку об&#39;єму. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
+link <a href="https://dobroznak.ua/katalog/simvolika-ukrajini/znachok-ministerstva-oboroni-ukrajini">https://dobroznak.ua/katalog/simvolika-ukrajini/znachok-ministerstva-oboroni-ukrajini</a><br>
+image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_IMG_8534.jpg' height='70'><br>
+id <b>2717</b><br>
+availability <b>in stock</b><br>
+identifier_exists <b>no</b><br>
+condition <b>new</b><br>
+product_type <b>Символіка України</b><br>
+
+<hr>
+price <b>85.00 UAH</b><br>
+title <b>Прапорець Зсу (Збройних Сил України) (Без Тримача)</b><br>
+description <b>Про товар:                 ціна вказана без урахування ціни тримача.  Тримачі на вибір є пластикові або металеві, продаються окремо.. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
+link <a href="https://dobroznak.ua/katalog/praportsi/praporets-zsu-zbrojnikh-sil-ukrajini">https://dobroznak.ua/katalog/praportsi/praporets-zsu-zbrojnikh-sil-ukrajini</a><br>
+image_link <img src='https://dobroznak.ua/components/com_jshopping/files/img_products/full_IMG_8279.jpg' height='70'><br>
+id <b>1833</b><br>
+availability <b>in stock</b><br>
+identifier_exists <b>no</b><br>
+condition <b>new</b><br>
+product_type <b>Прапорці в Наявності | Dobroznak.Ua</b><br>
+
+<hr>
 price <b>35.00 UAH</b><br>
 title <b>Настільний Тримач Для Прапорця</b><br>
 description <b>Про товар: настільний тримач для прапорця  представляємо настільний тримач для прапорця, ідеальний для офісу або конференц-залу. Виготовлений із міцного пластику, цей тримач забезпечує надійну та стильну підтримку для вашого прапорця. Висота тримача становить 33 см, що робить його ідеальним для виставки прапорців на столі чи полиці. Цей елегантний аксесуар допоможе створити професійну атмосферу та підкреслить вашу приналежність до організації чи спільноти.     Звертаємо вашу увагу, що ви завжди можете замовити цей або будь-який інший виріб з нашого сайту зі своїм логотипом, емблемою, гербом, знаком.  Мінімальна кількість продукції для замовлення з власним логотипом 10 одиниць.Термін виробництва від 5 робочих днів.. Прапорці, значки, магніти, стікери - найбільший вибір. Національна символіка або ваш дизайн. Оригінальні подарунки, сувеніри, прикольні подарунки для друзів, клієнтів та знайомих. Шоурум у києві. Власне виробництво. Продукція партнерів. Доставка у день замовленя. Різні варіанти оплати. Безкоштовна доставка</b><br>
