--- a/wd/files/woodyardstore.com.ua-ADONLY.woodyardstorecomua.feed.id0.html
+++ b/wd/files/woodyardstore.com.ua-ADONLY.woodyardstorecomua.feed.id0.html
@@ -138,6 +138,50 @@ product_type <b>Герби, Тризуби</b><br>
 
 <hr>
 price <b>299 UAH</b><br>
+title <b>Сучасний Герб України, Тризуб в Кабінет, Дерев&#39;яний Декор Для Кімнати 25x18 См, Подарунок Військовому</b><br>
+GAStitle <b>Сучасний Герб України  Тризуб в Кабінет  Дерев&#39;яний Декор Для Кімнати 25x18 См  Подарунок Військовому</b><br>
+description <b>Сучасний герб україни, тризуб в кабінет, дерев&#39;яний декор для кімнати 25x18 см, подарунок військовому</b><br>
+link <a href="https://woodyardstore.com.ua/ua/p1865825787-sovremennyj-gerb-ukrainy.html">https://woodyardstore.com.ua/ua/p1865825787-sovremennyj-gerb-ukrainy.html</a><br>
+image_link <img src='https://images.prom.ua/4693863524_suchasnij-gerb-ukrayini.jpg' height='70'><br>
+id <b>3339413270</b><br>
+availability <b>in stock</b><br>
+product_type <b>Герби, Тризуби</b><br>
+
+<hr>
+price <b>299 UAH</b><br>
+title <b>Настінний Герб України, Тризуб Зсу, Сучасний Декор Стін 25x18 См, Золотий Герб На Чорному Щиті</b><br>
+GAStitle <b>Герб України  Тризуб Зсу  Сучасний Декор Стін 25x18 См  Золотий Герб На Чорному Щиті</b><br>
+description <b>Настінний герб україни, тризуб зсу, сучасний декор стін 25x18 см, золотий герб на чорному щиті</b><br>
+link <a href="https://woodyardstore.com.ua/ua/p1865825778-nastennyj-gerb-ukrainy.html">https://woodyardstore.com.ua/ua/p1865825778-nastennyj-gerb-ukrainy.html</a><br>
+image_link <img src='https://images.prom.ua/4693860707_nastinnij-gerb-ukrayini.jpg' height='70'><br>
+id <b>1393134418</b><br>
+availability <b>in stock</b><br>
+product_type <b>Герби, Тризуби</b><br>
+
+<hr>
+price <b>299 UAH</b><br>
+title <b>Настінний Герб України, Тризуб в Офіс, Сучасний Декор Стін 25x18 См, Золотий Герб На Чорному Щиті</b><br>
+GAStitle <b>Герб України  Тризуб в Офіс  Сучасний Декор Стін 25x18 См  Золотий Герб На Чорному Щиті</b><br>
+description <b>Настінний герб україни, тризуб в офіс, сучасний декор стін 25x18 см, золотий герб на чорному щиті</b><br>
+link <a href="https://woodyardstore.com.ua/ua/p1865825814-nastennyj-gerb-ukrainy.html">https://woodyardstore.com.ua/ua/p1865825814-nastennyj-gerb-ukrainy.html</a><br>
+image_link <img src='https://images.prom.ua/4693872135_nastinnij-gerb-ukrayini.jpg' height='70'><br>
+id <b>3478160758</b><br>
+availability <b>in stock</b><br>
+product_type <b>Герби, Тризуби</b><br>
+
+<hr>
+price <b>299 UAH</b><br>
+title <b>Настінний Герб України, Тризуб Вишиванка, Сучасний Декор Стін 25x18 См, Золотий Герб На Чорному Щиті</b><br>
+GAStitle <b>Герб України  Тризуб Вишиванка  Сучасний Декор Стін 25x18 См  Золотий Герб На Чорному Щиті</b><br>
+description <b>Настінний герб україни, тризуб вишиванка, сучасний декор стін 25x18 см, золотий герб на чорному щиті</b><br>
+link <a href="https://woodyardstore.com.ua/ua/p1865825832-nastennyj-gerb-ukrainy.html">https://woodyardstore.com.ua/ua/p1865825832-nastennyj-gerb-ukrainy.html</a><br>
+image_link <img src='https://images.prom.ua/4693878735_nastinnij-gerb-ukrayini.jpg' height='70'><br>
+id <b>519099720</b><br>
+availability <b>in stock</b><br>
+product_type <b>Герби, Тризуби</b><br>
+
+<hr>
+price <b>299 UAH</b><br>
 title <b>Настінний Герб України, Тризуб Вогонь, Настінний Декор Для Дому 25x18 См, Чорний Герб На Червоному Щиті</b><br>
 GAStitle <b>Герб України  Тризуб Вогонь  Настінний Декор Для Дому 25x18 См  Чорний Герб На Червоному Щиті</b><br>
 description <b>Настінний герб україни, тризуб вогонь, настінний декор для дому 25x18 см, чорний герб на червоному щиті</b><br>
