--- a/wd/files/woodyardstore.com.ua-ADONLY.woodyardstorecomua.feed.id0.html
+++ b/wd/files/woodyardstore.com.ua-ADONLY.woodyardstorecomua.feed.id0.html
@@ -6121,6 +6121,17 @@ availability <b>in stock</b><br>
 product_type <b>Лофт</b><br>
 
 <hr>
+price <b>449 UAH</b><br>
+title <b>Декоративне Панно На Стіну, Дерев&#39;яний Декор Для Кімнати &quot;Настінна Панель Хвиля&quot;, Картина Лофт 25x18 См</b><br>
+GAStitle <b>Декоративне Панно На Стіну  Дерев&#39;яний Декор Для Кімнати &quot;Настінна Панель Хвиля&quot;  Картина Лофт 25x18 См</b><br>
+description <b>Декоративне панно на стіну, дерев&#39;яний декор для кімнати &quot;настінна панель хвиля&quot;, картина лофт 25x18 см</b><br>
+link <a href="https://woodyardstore.com.ua/ua/p1932289134-dekorativnoe-panno-stenu.html">https://woodyardstore.com.ua/ua/p1932289134-dekorativnoe-panno-stenu.html</a><br>
+image_link <img src='https://images.prom.ua/5605135340_dekorativne-panno-na.jpg' height='70'><br>
+id <b>955155374</b><br>
+availability <b>in stock</b><br>
+product_type <b>Лофт</b><br>
+
+<hr>
 price <b>399 UAH</b><br>
 title <b>Декоративне Панно з Дерева, Настінний Декор Для Дому &quot;Листок Мінімалізм&quot;, Інтер&#39;єрна Картина 30x18 См</b><br>
 GAStitle <b>Декоративне Панно з Дерева  Настінний Декор Для Дому &quot;Листок Мінімалізм&quot;  Інтер&#39;єрна Картина 30x18 См</b><br>
